--- a/src/htmlContent/working-set.html
+++ b/src/htmlContent/working-set.html
@@ -1,4 +1,4 @@
-<div id="{{id}}">
+<div class="working-set-view" id="{{id}}">
     <div class="working-set-header"><span class="working-set-header-title">{{WORKING_FILES}}</span>
         <div class="working-set-option-btn btn-alt-quiet"></div>
     </div>
